--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -46,6 +46,8 @@ SRCS	= ft_isalpha.c   			\
 		  ft_putstr_fd.c			\
 		  ft_putendl_fd.c			\
 		  ft_putnbr_fd.c			\
+		  get_next_line.c			\
+		  get_next_line_utils.c		\
 
 SRCS_B	= 	ft_lstnew_bonus.c		  	\
 			ft_lstadd_front_bonus.c 	\
